Project

General

Profile

Actions

Bug #40255

closed

radosgw-admin bucket limit check percentage warnings don't work

Added by Paul Emmerich almost 5 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

radosgw-admin bucket limit check warnings don't work because of int vs. floating point math


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #48724: nautilus: radosgw-admin bucket limit check percentage warnings don't workResolvedNathan CutlerActions
Copied to rgw - Backport #48725: octopus: radosgw-admin bucket limit check percentage warnings don't workResolvedNathan CutlerActions
Actions #2

Updated by Casey Bodley almost 5 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Casey Bodley about 4 years ago

  • Pull request ID set to 33759
Actions #4

Updated by J. Eric Ivancich over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to octopus,nautilus
Actions #5

Updated by Backport Bot over 3 years ago

  • Copied to Backport #48724: nautilus: radosgw-admin bucket limit check percentage warnings don't work added
Actions #6

Updated by Backport Bot over 3 years ago

  • Copied to Backport #48725: octopus: radosgw-admin bucket limit check percentage warnings don't work added
Actions #7

Updated by Nathan Cutler over 3 years ago

  • Pull request ID changed from 33759 to 28489
Actions #8

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF