rgw: use floating point math for 'bucket limit check'

change guarantees that each arithmetic operator has at least one
floating-point operand

Fixes: https://tracker.ceph.com/issues/40255

Signed-off-by: Casey Bodley <cbodley@redhat.com>